force-app/main/default/objects/Score__c/fields/Completed_By_Employee__c.field-meta.xml
<CustomField>
    <fullName>Completed_By_Employee__c</fullName>
    <label>Completed By Employee</label>
    <summarizedField>Form__c.Date_Time_Completed__c</summarizedField>
    <summaryFilterItems>
        <field>Form__c.For_Manager__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Form__c.Score__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>