force-app/main/default/objects/Score__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <label>Group</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All Employees</fullName>
            </value>
            <value>
                <fullName>All Employees&apos; Managers</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Jr Employees</fullName>
            </value>
            <value>
                <fullName>Sr Employees</fullName>
            </value>
            <value>
                <fullName>Sales Employees</fullName>
            </value>
            <value>
                <fullName>Marketing Employees</fullName>
            </value>
            <value>
                <fullName>Support Employees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>