force-app/main/default/objects/Score__c/fields/Last_Completed_Eval__c.field-meta.xml
<CustomField>
    <fullName>Last_Completed_Eval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Last Completed Eval</label>
    <type>Checkbox</type>
</CustomField>