force-app/main/default/objects/Score__c/fields/Last_Eval_Period__c.field-meta.xml
<CustomField>
    <fullName>Last_Eval_Period__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Last Eval Period</label>
    <type>Checkbox</type>
</CustomField>