force-app/main/default/objects/Score__c/fields/Min_Question_Score__c.field-meta.xml
<CustomField>
    <fullName>Min_Question_Score__c</fullName>
    <label>Min Question Score</label>
    <summarizedField>Form__c.Question_Score__c</summarizedField>
    <summaryForeignKey>Form__c.Score__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>