force-app/main/default/objects/Score__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <label>Score</label>
    <summarizedField>Form__c.Question_Score__c</summarizedField>
    <summaryForeignKey>Form__c.Score__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>