force-app/main/default/objects/Score__c/fields/View_By_Manager__c.field-meta.xml
<CustomField>
    <fullName>View_By_Manager__c</fullName>
    <formula>IF(Manager__c = $User.Id , 1 , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View By Manager</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>